# peakfinder

./: .gitignore  README.md  _config.yml  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: nd_peak_concepts.md  peak_1d_examples.md  peak_2d_examples.md  peak_counting.md  pypi_release_guide.md  quickstart.md  segment_tree_usage.md
docs/assets/: .gitkeep  peak_detection_diagram.py
peakfinder/: detector.py
peakfinder/core/: __init__.py  count.py  n_d.py  one_d.py  two_d.py
peakfinder/structures/: __init__.py  rmq.py  segment_tree.py
peakfinder/utils/: __init__.py  compression.py  validation.py
peakfinder/visualization/: __init__.py  plot_1d.py  plot_2d.py
tests/: test_compression.py  test_detector.py  test_one_d.py  test_two_d.py  test_validation.py
